<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- useless strings -->
    <string name="lipsum1">Vítr skoro nefouká a tak by se na první pohled mohlo zdát, že se balónky snad vůbec nepohybují.</string>
    <string name="lipsum2">Vítr skoro nefouká a tak by se na první pohled mohlo zdát, že se balónky snad vůbec nepohybují. Jenom tak klidně levitují ve vzduchu. Jelikož slunce jasně září a na obloze byste od východu k západu hledali mráček marně, balónky působí jako jakási fata morgána uprostřed pouště. Zkrátka široko daleko nikde nic, jen zelenkavá tráva, jasně modrá obloha a tři křiklavě barevné pouťové balónky, které se téměř nepozorovatelně pohupují ani ne moc vysoko, ani moc nízko nad zemí. Kdyby pod balónky nebyla sytě zelenkavá tráva, ale třeba suchá silnice či beton, možná by bylo vidět jejich barevné stíny - to jak přes poloprůsvitné barevné balónky prochází ostré sluneční paprsky. Jenže kvůli všudy přítomné trávě jsou stíny balónků sotva vidět, natož aby šlo rozeznat, jakou barvu tyto stíny mají. Uvidět tak balónky náhodný kolemjdoucí, jistě by si pomyslel, že už tu takhle poletují snad tisíc let. Stále si víceméně drží výšku a ani do stran se příliš nepohybují.</string>
    <string name="lipsum3">Vítr skoro nefouká a tak by se na první pohled mohlo zdát, že se balónky snad vůbec nepohybují. Jenom tak klidně levitují ve vzduchu. Jelikož slunce jasně září a na obloze byste od východu k západu hledali mráček marně, balónky působí jako jakási fata morgána uprostřed pouště. Zkrátka široko daleko nikde nic, jen zelenkavá tráva, jasně modrá obloha a tři křiklavě barevné pouťové balónky, které se téměř nepozorovatelně pohupují ani ne moc vysoko, ani moc nízko nad zemí. Kdyby pod balónky nebyla sytě zelenkavá tráva, ale třeba suchá silnice či beton, možná by bylo vidět jejich barevné stíny - to jak přes poloprůsvitné barevné balónky prochází ostré sluneční paprsky. Jenže kvůli všudy přítomné trávě jsou stíny balónků sotva vidět, natož aby šlo rozeznat, jakou barvu tyto stíny mají. Uvidět tak balónky náhodný kolemjdoucí, jistě by si pomyslel, že už tu takhle poletují snad tisíc let. Stále si víceméně drží výšku a ani do stran se příliš nepohybují. Proti slunci to vypadá, že se slunce pohybuje k západu rychleji než balónky, a možná to tak skutečně je. Nejeden filozof by mohl tvrdit, že balónky se sluncem závodí, ale fyzikové by to jistě vyvrátili. Z fyzikálního pohledu totiž balónky působí zcela nezajímavě.</string>
    <string name="hello_world">Hello world!</string>

    <!-- usable strings -->
    <string name="app_name">Asistent Rozhodčího</string>
    <string name="tests_exam">Test</string>
    <string name="tests_browsing">Prohlížení otázek</string>
    <string name="tests_practice">Procvičování otázek</string>
    <string name="tests_exam_evaluation">Vyhodnocení testu</string>
    <string name="tests_exam_launcher">Nastavení testu</string>
    <string name="action_settings">Nastavení</string>
    <string name="buttonTestsExam">Testy</string>
    <string name="next">Další</string>
    <string name="previous">Předchozí</string>
    <string name="evaluate">Vyhodnotit</string>
    <string name="right_answers">Správné odpovědi</string>
    <string name="user_answers">Uživatelské odpovědi</string>
    <string name="lipsum">Vítr skoro nefouká</string>
    <string name="errors_count">Počet chyb:</string>
    <string name="browse_wrong_questions">Projít chybné odpovědi</string>
    <string name="browse_all_questions">Projít všechny otázky</string>
    <string name="questions_count">Počet otázek</string>
    <string name="start_test">Spustit test</string>
    <string name="new_exam">Nový test</string>
    <string name="test_time_in_minutes">Délka testu v minutách</string>
    <string name="next_matches">Příští zápasy</string>
    <string name="table">Tabulka</string>
    <string name="current_results">Aktuální výsledky</string>
    <string name="title_activity_home">Asistent Rozhodčího</string>
    <string name="tests">Testy</string>
    <string name="results">Výsledky</string>
    <string name="refresh">Aktualizovat</string>
    <string name="title_activity_main">Asistent Rozhodčího</string>
    <string name="title_activity_league">LeagueActivity</string>
    <string name="icon">ikona</string>
    <string name="regions">Regiony</string>
    <string name="leagues">Soutěže</string>
    <string name="image">obrázek</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="menu_item_home">Home</string>
    <string name="menu_item_results">Výsledky</string>
    <string name="menu_item_tests">Testy</string>
    <string name="favourites">Oblíbené</string>
    <string name="undo">zpět</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="unpicked_region">Region zatím nebyl vybrán</string>
    <string name="blank_name">Jméno nebylo zadáno</string>

    <string name="no_delegation">Žádné obsazení</string>
    <string name="add_referee">Přidat rozhodčího</string>
    <string name="name">Jméno</string>
    <string name="name_in_delegation">Jméno v obsazení</string>
    <string name="choose_positions">Vyberte pozice, na kterých se má hledat vaše jméno</string>
    <string name="hr">HR</string>
    <string name="ar1">AR1</string>
    <string name="ar2">AR2</string>
    <string name="r4">R4</string>
    <string name="ds">DS</string>
    <string name="td">TD</string>
    <string name="updated">Aktualizováno</string>
    <string name="add">Přidat</string>
    <string name="edit_subscribed_delegations">Upravit odebírané delegace</string>
    <string name="no_results">Žádné výsledky</string>
    <string name="unavailable_table">Tabulka není dostupná</string>
    <string name="no_next_matches">Žádné další zápasy</string>
    <string name="no_note">Žádná poznámka</string>
</resources>
