<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_home"
            android:checked="true"
            android:icon="@drawable/menu_home"
            android:title="@string/menu_item_home" />
        <item
            android:id="@+id/menu_item_results"
            android:icon="@drawable/menu_results"
            android:title="@string/menu_item_results" />
    </group>
    <group
        android:id="@+id/menu_item_submenu_tests"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_tests_practice"
            android:icon="@drawable/menu_practice"
            android:title="@string/tests_browsing" />
        <item
            android:id="@+id/menu_item_tests_exam"
            android:icon="@drawable/menu_test"
            android:title="@string/tests_exam" />
    </group>
</menu>