<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="cz.upol.vojami04.refereeassistant.tests.TestsExamEvaluationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/errors_count" />

    <TextView
        android:id="@+id/textViewErrorsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/buttonWrongQuestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startBrowsingWrongQuestions"
        android:text="@string/browse_wrong_questions" />

    <Button
        android:id="@+id/buttonAllQuestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startBrowsingAllQuestions"
        android:text="@string/browse_all_questions" />

</LinearLayout>
