<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@color/primary_light"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image"
        android:paddingLeft="@dimen/default_padding"
        android:paddingTop="@dimen/default_padding"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/text_view_region"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view"
        android:paddingLeft="@dimen/default_padding"
        android:paddingTop="@dimen/default_padding"
        android:text="@string/unpicked_region"
        android:textColor="@color/primary_text"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_view_name"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_region"
        android:paddingLeft="@dimen/default_padding"
        android:paddingTop="@dimen/default_padding"
        android:text="@string/blank_name"
        android:textColor="@color/primary_text"
        android:textSize="14sp" />
</RelativeLayout>