<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cz.vojacekmilan.refereeassistant.results.ResultsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/current_results" />

            <WebView
                android:id="@+id/currentResultsWebView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/default_padding"
                android:text="@string/table" />

            <WebView
                android:id="@+id/tableWebView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/default_padding"
                android:text="@string/next_matches" />

            <WebView
                android:id="@+id/nextMatchesWebView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="downloadAllTables"
                android:text="@string/refresh" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
