<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/horizontal_divider_1"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:showDividers="middle"
    tools:context="cz.upol.vojami04.refereeassistant.tests.TestsExamLauncherActivity">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questions_count" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_time_in_minutes"
            android:layout_column="2" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp">

        <NumberPicker
            android:id="@+id/timeNumberPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/default_padding" />

        <NumberPicker
            android:id="@+id/questionsCountNumberPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/default_padding" />
    </TableRow>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="startExam"
        android:padding="@dimen/default_padding"
        android:text="@string/start_test" />

</TableLayout>
