<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cz.vojacekmilan.refereeassistant.results.LeagueFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/prevRoundButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:contentDescription="@string/previous"
                    android:padding="@dimen/default_padding_min"
                    android:src="@drawable/arrow_prev_off" />

                <TextView
                    android:id="@+id/roundTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/results"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/primary" />

                <ImageButton
                    android:id="@+id/nextRoundButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:contentDescription="@string/next"
                    android:padding="@dimen/default_padding_min"
                    android:src="@drawable/arrow_next_off" />
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TableLayout
                    android:id="@+id/resultsTableLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/table"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primary" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TableLayout
                    android:id="@+id/tableTableLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/next_matches"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primary" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TableLayout
                    android:id="@+id/nextMatchesTableLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </HorizontalScrollView>

            <TextView
                android:id="@+id/updatedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>