<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cz.vojacekmilan.refereeassistant.tests.ExamBrowsingActivity">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_question"
                android:text="@string/lipsum3"
                android:layout_margin="@dimen/default_padding"
                style="@style/ShadowNoSideMargin"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                style="@style/ShadowNoSideMargin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view_answer_1"
                    style="@style/RadioButtonAnswer" />

                <TextView
                    android:id="@+id/text_view_answer_2"
                    style="@style/RadioButtonAnswer" />

                <TextView
                    android:id="@+id/text_view_answer_3"
                    style="@style/RadioButtonAnswer" />

                <TextView
                    android:id="@+id/text_view_answer_4"
                    style="@style/RadioButtonAnswer" />
            </LinearLayout>

            <View
                android:id="@+id/fillerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:dividerPadding="12dip"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prev_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="prevQuestion"
            android:text="@string/previous" />

        <Button
            android:id="@+id/next_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="nextQuestion"
            android:text="@string/next" />
    </LinearLayout>

</LinearLayout>
